--- a/Resto3/index.html
+++ b/Resto3/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resto 1 en JS</title>
+    <title>Resto 3 en JS</title>
 </head>
 <body>
-    <script src="./app4.js" type="text/javascript"></script>
+    
+    <script src="./app.js"></script>
 </body>
 </html>
