--- a/Resto2/index.html
+++ b/Resto2/index.html
@@ -7,6 +7,6 @@
     <title>Resto2 en JS</title>
 </head>
 <body>
-    <script src="./app.js"></script>
+    <script src="./app2.js"></script>
 </body>
 </html>
