--- a/TODOList/index.html
+++ b/TODOList/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tamagotchi</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>TODO List</title>
 </head>
 <body>
-    <script src="./app2.js"></script>
+    <h1>Hello World</h1>
+    <script src="./app.js"></script>
 </body>
 </html>
