update mercredi 15/9 soir

--- a/TODOList/index.html
+++ b/TODOList/index.html
@@ -8,7 +8,17 @@
     <title>TODO List</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="container">
+        <h1>TP TODO List</h1>
+        <div class="input-line">
+            <label for="task">Quelle est votre tache :</label>
+            <input id="task" name="task" type="text">
+            <button class="add-task">Ajouter</button>
+        </div>
+        <div class="todos">
+
+        </div>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
