update jeudi 16/09 matin tot

--- a/TODOList/index.html
+++ b/TODOList/index.html
@@ -13,6 +13,11 @@
         <div class="input-line">
             <label for="task">Quelle est votre tache :</label>
             <input id="task" name="task" type="text">
+            <select name="categories" id="categories" class="categories">
+                <option value="Loisir">Loisir</option>
+                <option value="Ménage">Ménage</option>
+                <option value="administratif">Administratif</option>
+            </select>
             <button class="add-task">Ajouter</button>
         </div>
         <div class="todos">
