--- a/Labyrinthe/index.html
+++ b/Labyrinthe/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container">
         <div class="start-line d-flex fd-col ai-center">
-            <h1>Mouse's Maze</h1>
-            <button>Let's GO</button>
+            <h1>Labyrinth of Aim</h1>
+            <button class="startBtn">Let's GO</button>
         </div>
         <div class="maze d-flex fd-col ai-center">
             <div class="line-a d-flex">
