update jeudi 16/9 soir

--- a/TPGéo/index.html
+++ b/TPGéo/index.html
@@ -8,7 +8,22 @@
     <title>Ou Suis Je ?</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="btn-line">
+            <button class="where-now">Où suis-je ?</button>
+            <button class="save">Sauvegarder ma position</button>
+            <button class="where-past">Où étais-je ?</button>
+            <button class="reset" >Effacer ma position</button>
+        </div>
+        <div class="position">
+            <div class="latitude">
+                <p>Latitude : <span class="latitude-data"></span></p>
+            </div>
+            <div class="longitude">
+                <p>Longitude : <span class="longitude-data"></span></p>
+            </div>
+        </div>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
