--- a/TPGéo/index.html
+++ b/TPGéo/index.html
@@ -24,6 +24,6 @@
             </div>
         </div>
     </div>
-    <script src="./app.js"></script>
+    <script src="./app2.js"></script>
 </body>
 </html>
