--- a/TPCarnet/V2/index.html
+++ b/TPCarnet/V2/index.html
@@ -30,7 +30,7 @@
             <button class="validerBtn">Enregistrer</button>
         </div>
         <div class="find-bar">
-            <label for="find-bar">Rechercher : </label>
+            <label for="find-bar">Rechercher (prénom) : </label>
             <input type="text" name="find-bar" id="find-bar">
         </div>
         <div class="list-items">
