update carnet starter p2

--- a/TPCarnet2/V1/index.html
+++ b/TPCarnet2/V1/index.html
@@ -40,6 +40,10 @@
             </div>
             <button class="validerBtn">Enregistrer</button>
         </div>
+        <div class="find-bar">
+            <label for="find-bar">Rechercher (prénom) : </label>
+            <input type="text" name="find-bar" id="find-bar">
+        </div>
         <div class="list-items">
 
         </div>
