--- a/TPCarnet2/V1/index.html
+++ b/TPCarnet2/V1/index.html
@@ -35,8 +35,8 @@
                 <input type="tel" name="phone" id="phone">
             </div>
             <div class="form-special">
-                <label id="special-label" for="special-input">Adresse postal : </label>
-                <input type="text" name="special-input" id="special-input">
+                <label id="option-label" for="option-input">Adresse postal : </label>
+                <input type="text" name="option-input" id="option-input">
             </div>
             <button class="validerBtn">Enregistrer</button>
         </div>
@@ -48,7 +48,6 @@
 
         </div>
     </div>
-    <script src="./select.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
