--- a/TestD&G/index.html
+++ b/TestD&G/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="case">
-        <div class="base" draggable="true"></div>
+        <div class="base green" draggable="true">1</div>
     </div>
     <div class="case"></div>
     <div class="case"></div>
