--- a/TestD&G/index2.html
+++ b/TestD&G/index2.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="case">
-        <div class="base 1" draggable="true" name="1"></div>
+        <div class="base pink" draggable="true">1</div>
     </div>
     <div class="case"></div>
     <div class="case"></div>
     <div class="case">
-        <div class="base 2" draggable="true" name="2"></div>
+        <div class="base blue" draggable="true">2</div>
     </div>
     <div class="case"></div>
     </div>
