--- a/Test/index.html
+++ b/Test/index.html
@@ -7,6 +7,6 @@
     <title>Mes Test Perso</title>
 </head>
 <body>
-    <script src="./test.js"></script>
+    <script src="./test3.js"></script>
 </body>
 </html>
