--- a/SignatureMail/V1/index.html
+++ b/SignatureMail/V1/index.html
@@ -25,25 +25,25 @@
             </div>
             <div class="form-phone">
                 <label for="phone">Votre N° de téléphone (fixe) : </label>
-                <input type="text" name="phone" id="phone">
+                <input type="tel" name="phone" id="phone">
             </div>
             <div class="form-gsm">
                 <label for="gsm">Votre N° de téléphone (portable) : </label>
-                <input type="text" name="phone" id="phone">
+                <input type="tel" name="gsm" id="gsm">
             </div>
             <div class="form-mail">
                 <label for="mail">Votre adresse mail : </label>
                 <input type="text" name="mail" id="mail">
             </div>
             <div class="form-postal">
-                <label for="postal">Votre adresse mail : </label>
+                <label for="postal">Votre adresse postal : </label>
                 <input type="text" name="postal" id="postal">
             </div>
-            <button>Valider</button>
+            <button class="btnValider">Valider</button>
         </div>
         <div class="result-extern">
             <div class="result-interne">
-
+                
             </div>
         </div>
     </div>
