update brouillon signature

--- a/SignatureMail/V2/index.html
+++ b/SignatureMail/V2/index.html
@@ -42,6 +42,17 @@
             <button class="btnValider">Valider</button>
         </div>
         <div class="style-box">
+            <div class="element-choice">
+                <label for="element">Choisir l'element a modifier : </label>
+                <select name="element" id="element">
+                    <option value="">--- Choisir élément</option>
+                    <option value="name">Votre nom & prénom</option>
+                    <option value="poste">Votre poste</option>
+                    <option value="phones">Vos numéros de téléphone</option>
+                    <option value="mail">Votre mail</option>
+                    <option value="postal">Votre adresse postal</option>
+                </select>
+            </div>
             <div class="style-line1">
                 <label for="font">Choisissez la Police : </label>
                 <select name="font" id="font" class="font-select">
